--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ classificacao/
 # com a rede social Twitter
 coleta_tweets_tempo_real.py
 listener_tweets.py
+
+# Template que não é utilizado
+classificacao_manual.html
+
